# entity

./: CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  build.sh
src/: CMakeLists.txt  Entity.cpp  Entity.h  IVisit.h
tests/: CMakeLists.txt  TestEntity.cpp  TestEntity.h  main.cpp
